--- a/sandbox.html
+++ b/sandbox.html
@@ -10,7 +10,7 @@
                             <h5>Virtual Pathology at the University of Leeds</h5>
                         </label>
                         <div class="tab-content">
-                            The Leeds University Pathology E-learning portal has an introductory lecture series covering a range of pathology topics.
+                            <p>The Leeds University Pathology E-learning portal has an introductory lecture series covering a range of pathology topics.</p>
                         </div>
                     </div>
                     <div class="tab">
@@ -19,16 +19,16 @@
                             <h5>Duke University Medical School - Histology</h5>
                         </label>
                         <div class="tab-content">
-                            The Duke University Medical School website gives comprehensive coverage by topic, broken down into a 19-week course and by case, complete with diagnosis.
+                            <p>The Duke University Medical School website gives comprehensive coverage by topic, broken down into a 19-week course and by case, complete with diagnosis.</p>
                         </div>
                     </div>
                     <div class="tab">
-                        <input type="checkbox" id="chck2">
-                        <label class="tab-label" for="chck2">
+                        <input type="checkbox" id="chck3">
+                        <label class="tab-label" for="chck3">
                             <h5>ISGyP LiVE Educational Series</h5>
                         </label>
                         <div class="tab-content">
-                            The International Society of Gynecological Pathologists hosts weekly live events including slide sessions, lecture webinars, podcasts and journal clubs.
+                            <p>The International Society of Gynecological Pathologists hosts weekly live events including slide sessions, lecture webinars, podcasts and journal clubs.</p>
                         </div>
                     </div>
                 </div>
