Add favicons and meta tag info to head.php

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,110 +1,21 @@
-<div class="container-tabset">
-    <h2>Media Resources</h2>
-    <section class="tabset tabset-media">
-        <div class="row">
-            <div class="col-md-1">
-                <ul class="nav nav-tabs left-tabs sideways-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active show" href="#lorem-sleft" data-toggle="tab">Podcasts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#ipsum-sleft" data-toggle="tab">Videos</a>
-                    </li>
-                </ul>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
 
-            <div class="col-md-11">
-                <div class="container">
-                    <div class="tab-content">
-                        <article class="tab-pane container active show" id="lorem-sleft">
-                            <h3><i class="fas fa-podcast"></i></h3>
-                            <ul>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-mpc.png" alt="ModPath Chat logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The official podcast of <cite>Modern Pathology</cite>, the journal of the US and Canadian Academy of Pathology (USCAP), ModPath Chat features interviews with authors, opinion leaders and experts on the latest
-                                                science, technology, and developments in the field of pathology. The monthly series is hosted by Dr. George J. Netto, the Editor-in-Chief of
-                                                <cite>Modern Pathology</cite> and the Chair of Pathology at the University of Alabama in Birmingham.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-cap.jpg" alt="CAP logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The College of American Pathologists' CAPcasts feature interviews with leading pathologists on current issues impacting pathology and laboratory medicine. CAP is the leading organization of board-certified pathologists,
-                                                serving patients, pathologists and the public by fostering and advocating excellence in the practice of pathology and laboratory medicine worldwide.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dpp.png" alt="Digital Pathology Place logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>Aleksandra Zuraw discusses digital pathology, from the basic concepts to the newest developments, including image analysis and artificial intelligence. She also reviews scientific literature and - together with
-                                                her guests - explores the latest industry and research digital pathology trends.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dl.png" alt="Deeper Levels logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>A podcast about pathology, medicine, and science hosted by Natalie Banet, MD, a practicing Gynecologic and Cytopathologist and Assistant Professor of Pathology and Laboratory Medicine at the Warren Alpert Medical
-                                                School of Brown University.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </article>
-                        <article class="tab-pane container" id="ipsum-sleft">
-                            <h3><i class="fab fa-youtube"></i></h3>
-                            <ul>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-mpc.png" alt="ModPath Chat logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The official podcast of <cite>Modern Pathology</cite>, the journal of the US and Canadian Academy of Pathology (USCAP), ModPath Chat features interviews with authors, opinion leaders and experts on the latest
-                                                science, technology, and developments in the field of pathology. The monthly series is hosted by Dr. George J. Netto, the Editor-in-Chief of
-                                                <cite>Modern Pathology</cite> and the Chair of Pathology at the University of Alabama in Birmingham.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-cap.jpg" alt="CAP logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>The College of American Pathologists' CAPcasts feature interviews with leading pathologists on current issues impacting pathology and laboratory medicine. CAP is the leading organization of board-certified pathologists,
-                                                serving patients, pathologists and the public by fostering and advocating excellence in the practice of pathology and laboratory medicine worldwide.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dpp.png" alt="Digital Pathology Place logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>Aleksandra Zuraw discusses digital pathology, from the basic concepts to the newest developments, including image analysis and artificial intelligence. She also reviews scientific literature and - together with
-                                                her guests - explores the latest industry and research digital pathology trends.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dl.png" alt="Deeper Levels logo"></div>
-                                        <div class="text-wrapper">
-                                            <p>A podcast about pathology, medicine, and science hosted by Natalie Banet, MD, a practicing Gynecologic and Cytopathologist and Assistant Professor of Pathology and Laboratory Medicine at the Warren Alpert Medical
-                                                School of Brown University.</p>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png?v=0.0.11">
+    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png?v=0.0.11">
+    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png?v=0.0.11">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css" integrity="sha512-4wfcoXlib1Aq0mUtsLLM74SZtmB73VHTafZAvxIp/Wk9u1PpIsrfmTvK0+yKetghCL8SHlZbMyEcV8Z21v42UQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="static/css/libs/bootstrap.min.css"> -->
+    <!-- Bootstrap 4 Vertical Tabs CSS extension -->
+    <link rel="stylesheet" href="static/css/libs/b4vtabs.min.css">
+    <!-- custom stylesheet -->
+    <link rel="stylesheet" href="static/css/style.css">
+    <title>Pathology Training Hub | St James's Hospital</title>
+</head>
