Add hover overlay to slides UI and begin adding hrefs

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,21 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container-tabset">
+    <h2>Media Resources</h2>
+    <section class="tabset tabset-media">
+        <div class="row">
+            <div class="col-md-1">
+                <ul class="nav nav-tabs left-tabs sideways-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active show" href="#lorem-sleft" data-toggle="tab">Podcasts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ipsum-sleft" data-toggle="tab">Videos</a>
+                    </li>
+                </ul>
+            </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png?v=0.0.11">
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png?v=0.0.11">
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png?v=0.0.11">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Enter your description here" />
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css" integrity="sha512-4wfcoXlib1Aq0mUtsLLM74SZtmB73VHTafZAvxIp/Wk9u1PpIsrfmTvK0+yKetghCL8SHlZbMyEcV8Z21v42UQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="static/css/libs/bootstrap.min.css"> -->
-    <!-- Bootstrap 4 Vertical Tabs CSS extension -->
-    <link rel="stylesheet" href="static/css/libs/b4vtabs.min.css">
-    <!-- custom stylesheet -->
-    <link rel="stylesheet" href="static/css/style.css">
-    <title>Pathology Training Hub | St James's Hospital</title>
-</head>
+            <div class="col-md-11">
+                <div class="container">
+                    <div class="tab-content">
+                        <article class="tab-pane container active show" id="lorem-sleft">
+                            <h3><i class="fas fa-headphones"></i></h3>
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-mpc.png" alt="ModPath Chat logo"></div>
+                                        <div class="text-wrapper">
+                                            <p>The official podcast of <cite>Modern Pathology</cite>, the journal of the US and Canadian Academy of Pathology (USCAP), ModPath Chat features interviews with authors, opinion leaders and experts on the latest
+                                                science, technology, and developments in the field of pathology. The monthly series is hosted by Dr. George J. Netto, the Editor-in-Chief of
+                                                <cite>Modern Pathology</cite> and the Chair of Pathology at the University of Alabama in Birmingham.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-cap.jpg" alt="CAP logo"></div>
+                                        <div class="text-wrapper">
+                                            <p>The College of American Pathologists' CAPcasts feature interviews with leading pathologists on current issues impacting pathology and laboratory medicine. CAP is the leading organization of board-certified pathologists,
+                                                serving patients, pathologists and the public by fostering and advocating excellence in the practice of pathology and laboratory medicine worldwide.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dpp.png" alt="Digital Pathology Place logo"></div>
+                                        <div class="text-wrapper">
+                                            <p>Aleksandra Zuraw discusses digital pathology, from the basic concepts to the newest developments, including image analysis and artificial intelligence. She also reviews scientific literature and - together with
+                                                her guests - explores the latest industry and research digital pathology trends.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="img-wrapper flex-centre"><img src="static/images/logos/logo-dl.png" alt="Deeper Levels logo"></div>
+                                        <div class="text-wrapper">
+                                            <p>A podcast about pathology, medicine, and science hosted by Natalie Banet, MD, a practicing Gynecologic and Cytopathologist and Assistant Professor of Pathology and Laboratory Medicine at the Warren Alpert Medical
+                                                School of Brown University.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </article>
+                        <article class="tab-pane container" id="ipsum-sleft">
+                            <h3><i class="fab fa-youtube"></i></h3>
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/49J2Fy5ibRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe></div>
+                                        <div class="text-wrapper">
+                                            <h4>Washington University in St. Louis Nephrology Web Series</h4>
+                                            <p>Realtime discussion of renal pathology cases by a nephrology fellow and renal pathologist from the University of Washington. Episodes include guided reviews of the histology and special stains, relevant differential
+                                                diagnosis and final diagnosis.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/m097UUkqU2Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe></div>
+                                        <div class="text-wrapper">
+                                            <h4>Medical School Pathology</h4>
+                                            <p>Video lecture series from Dr. John Minarcik covering all the major topics in the <cite>Robbins Pathology</cite> textbooks, as well as numerous virtual microscopy histopathology labs. Dr. Minarcik also runs a
+                                                free online medical school pathology course that can be accessed here.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/yQQ2Dmz42Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe></div>
+                                        <div class="text-wrapper">
+                                            <h4>Jerad Gardner, MD</h4>
+                                            <p>Pennsylvania-based Dr. Gardner, who is also a deputy Editor-in-Chief of
+                                                <cite>Archives of Pathology & Laboratory Medicine</cite>, leads regular comprehensive microscopic sessions on dermatopathology and soft tissue pathology.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <div class="media-wrapper"><iframe width="340" height="185" src="https://www.youtube.com/embed/UvvXrh1vQfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe></div>
+                                        <div class="text-wrapper">
+                                            <h4>pathCast</h4>
+                                            <p>Lecture series covering various aspects of pathology, including challenging topics and updates to disease classifications. Each one-hour session is streamed live and available for free, on-demand viewing.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
